--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,20 +6,22 @@
     app:startDestination="@id/listFragment">
 
     <fragment
-        android:id="@+id/listFragment"
-        android:name="com.example.lab_week_03.ListFragment"
-        android:label="ListFragment" >
-        <action
-            android:id="@+id/action_listFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.example.lab_week_04.FavoritesFragment"
         android:label="fragment_favorites"
         tools:layout="@layout/fragment_favorites" />
     <fragment
+        android:id="@+id/listFragment"
+        android:name="com.example.lab_week_04.ListFragment"
+        android:label="fragment_list"
+        tools:layout="@layout/fragment_list" >
+        <action
+            android:id="@+id/action_listFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/detailFragment"
-        android:name="com.example.lab_week_03.DetailFragment"
-        android:label="DetailFragment" />
+        android:name="com.example.lab_week_04.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" />
 </navigation>
